--- a/senseis pet main.html
+++ b/senseis pet main.html
@@ -9,7 +9,7 @@
 
 <div id="hello">
 <h1 id="Haruka">Hello world!</h1>
-<h5>I am changing this to see if you I can make it visible on another computer</h5>
+<h5>Has this really changed?</h5>
 </div>
 
 <body>
