added all of the excepted pages for the future and experimented a little with CSS

--- a/About.html
+++ b/About.html
@@ -8,7 +8,7 @@
 
 <body>
 
-<h3>About Sensei's Pet</h3>
+<h3 class="fire">About Sensei's Pet</h3>
 
 <p>
   Senseis pet is a program of necessity. It was designed primarily for use by Assistant Language
