--- a/login.html
+++ b/login.html
@@ -2,12 +2,14 @@
 <html>
 
 <head>
+<link href="senseistyle.css" type="text/css" rel="stylesheet">
 <title>Login to Sensei's Pet</title>
 </head>
 
 <body>
+    <h2 class="heading">Sensei Says, "Log in"</h2>
 
-<h4>New to Sensei's Pet? Create an account here</h4>
+    <h4 class="fire">New to Sensei's Pet? Create an account here</h4>
 
 </body>
 
