--- a/senseis pet main.html
+++ b/senseis pet main.html
@@ -3,14 +3,11 @@
 
 <head>
 <link href="senseistyle.css" type="text/css" rel="stylesheet">
-
 <title>Sensei's Pet - The only thing you need..... EVER!!</title>
 </head>
 
-<div id="hello">
-<h1 id="Haruka">Hello world!</h1>
-<h5>Kaye is a pretty alright person</h5>
-</div>
+<h1 class="heading" id="main-title">Sensei's Pet</h1>
+<h4>Where your dreams come to die...</h4>
 
 <body>
 
