--- a/senseis pet main.html
+++ b/senseis pet main.html
@@ -11,12 +11,12 @@
 
 <body>
 
-<ul>
+<ul id="buttons">
 	<li><a href="About.html">About</a></li>
 	<li><a href="login.html">Login</a></li>
-	<li>Game's List</li>
-	<li>New User's</li>
-	<li>FAQ</li>
+	<li><a href="games.html">Game's List</a></li>
+	<li><a href="register.html">New User's</a></li>
+	<li><a href="faq.html">FAQ</a></li>
 </ul>
 
 
