--- a/senseis pet main.html
+++ b/senseis pet main.html
@@ -9,7 +9,7 @@
 <h1 class="heading" id="main-title">Sensei's Pet</h1>
 <h4>Where your dreams come to die...</h4>
 
-<body>
+<div>
 
 <ul id="buttons">
 	<li><a href="About.html">About</a></li>
@@ -19,9 +19,7 @@
 	<li><a href="faq.html">FAQ</a></li>
 </ul>
 
-
-
-</body>
+</div>
 
 
 
