animated the buttons

--- a/senseis pet main.html
+++ b/senseis pet main.html
@@ -1,31 +1,30 @@
 <!DOCTYPE html>
 <html>
+		<head>
+			
+			<link href="senseistyle.css" type="text/css" rel="stylesheet">
+			
+			<title>Sensei's Pet - The only thing you need..... EVER!!</title>
 
-<head>
-<link href="senseistyle.css" type="text/css" rel="stylesheet">
-<title>Sensei's Pet - The only thing you need..... EVER!!</title>
-</head>
+		</head>
 
-<h1 class="heading" id="main-title">Sensei's Pet</h1>
-<h4>Where your dreams come to die...</h4>
+
+		<h1 class="heading" id="main-title">Sensei's Pet</h1>
+
+		<h4>Where your dreams come to die...</h4>
 
 <div>
-
-<ul id="buttons">
-	<li><a href="About.html">About</a></li>
-	<li><a href="login.html">Login</a></li>
-	<li><a href="games.html">Game's List</a></li>
-	<li><a href="register.html">New User's</a></li>
-	<li><a href="faq.html">FAQ</a></li>
-</ul>
+<body>
+	<ul id="buttons">
+		<li><a href="About.html" class="link">About</a></li>
+		<li><a href="login.html" class="link">Login</a></li>
+		<li><a href="games.html" class="link">Game's List</a></li>
+		<li><a href="register.html" class="link">New User's</a></li>
+		<li><a href="faq.html" class="link">FAQ</a></li>
+	</ul>
+</body>
 
 </div>
-
-
-
-
-
-
 
 
 
