--- a/senseis pet main.html
+++ b/senseis pet main.html
@@ -8,13 +8,18 @@
 
 		</head>
 
-
-		<h1 class="heading" id="main-title">Sensei's Pet</h1>
-
-		<h4>Where your dreams come to die...</h4>
+	
 
 <div>
 <body>
+		<div id="main">
+		
+			<h1 class="heading" id="main-title">SENSEI'S PET</h1>
+		
+			<h4>Where your dreams come to die...</h4>
+		
+		</div>
+
 	<ul id="buttons">
 		<li><a href="About.html" class="link">About</a></li>
 		<li><a href="login.html" class="link">Login</a></li>
